--- a/.gitignore
+++ b/.gitignore
@@ -63,6 +63,7 @@ config/emacs/backups/
 config/emacs/eln-cache/
 config/emacs/elpa/
 config/emacs/tutorial/
+config/emacs/transient/
 config/emacs/*.*~
 **/#*
 **/.#*
