--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -1,9 +1,9 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
 # BEGIN_KITTY_FONTS
-font_family      family="Fira Mono" style=Medium
+font_family      family="Fira Code" style=Medium
 font_size 	 16
-bold_font        always
+bold_font        auto
 italic_font      false
 bold_italic_font auto
 # END_KITTY_FONTS
