--- a/distrobox/arch.ini
+++ b/distrobox/arch.ini
@@ -1,5 +1,6 @@
 [dev]
-image=archlinux:latest
+image=quay.io/toolbx/arch-toolbox
 additional_packages="alacritty zsh nvim fzf inotify-tools git unzip inetutils"
 additional_packages="mise wl-clipboard rsync tmux btop fd stow docker-compose"
+additional_packages="ttf-jetbrains-mono-nerd"
 volume="/run/user/$UID/podman/podman.sock:/run/user/$UID/podman/podman.sock"
