--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -7,6 +7,7 @@ bold_font        auto
 italic_font      false
 bold_italic_font auto
 # END_KITTY_FONTS
+hide_window_decorations yes
 
 #: Fonts {{{
 
