(ghostty): change font

--- a/config/ghostty/config
+++ b/config/ghostty/config
@@ -1,9 +1,9 @@
 # command = /usr/bin/zsh 
 theme = Gruvbox Light Hard
 #theme = GruvboxDark
-font-family = Fira Code
+font-family = JetBrainsMono Nerd Font
 font-size = 15
-font-style = Regular
+font-style = Medium
 font-style-bold = false
 font-feature = -calt
 font-feature = -liga
