--- a/config/nvim/snippets/package.json
+++ b/config/nvim/snippets/package.json
@@ -12,6 +12,10 @@
             {
                 "language": ["eelixir", "heex", "elixir"],
                 "path": "./eelixir.json"
+            },
+            {
+                "language": "html",
+                "path": "./html.json"
             }
         ]
     }
